# veriflow

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.json  demo.py  fake_news.txt
src/veriflow/: __main__.py  aggregator.py  decomposer.py  mcp_server.py  pipeline.py  schemas.py
src/veriflow/connectors/: image.py  pdf.py  url.py
src/veriflow/verifiers/: image_integrity.py  metadata.py  provenance.py  web.py
tests/: test_aggregator.py  test_connectors.py  test_decomposer.py  test_pipeline.py  test_schemas.py
tests/test_verifiers/: test_image_integrity.py  test_metadata.py  test_provenance.py  test_web.py
